@startuml

title __SERVER's Class Diagram__\n


    namespace ain {
      class main.Datagram {
      }
    }

  


    namespace ain {
      class main.Game {
      }
    }

  

    namespace ain {
      class main.GameThread {
      }
    }

  

    namespace ain {
      class main.Server {
      }
    }

  

    namespace tils {
      class utils.ComUtils {
      }
    }

  

    namespace tils {
      class utils.MockSocket {
      }
    }

  

  main.Datagram o-- utils.ComUtils : utils
  main.Game o-- main.Datagram : com1
  main.Game o-- main.Datagram : com2
  main.Game o-- main.Game.State : state
  main.GameThread .up.|> java.lang.Runnable
  main.GameThread o-- main.Game : game
  utils.MockSocket -up-|> java.net.Socket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
